Вывод текста на новую страницу

--- a/aboutBook.html
+++ b/aboutBook.html
@@ -5,5 +5,10 @@
     <title>Title</title>
 </head>
 <body>
+<div id = "title"></div>
+<div id = "genre"></div>
+<div id = "authors"></div>
+<div id = "review"></div>
+<script src="aboutBook.js"></script>
 </body>
 </html>
