--- a/aboutBook.html
+++ b/aboutBook.html
@@ -5,10 +5,11 @@
     <title>Title</title>
 </head>
 <body>
-<div id = "title"></div>
-<div id = "genre"></div>
-<div id = "authors"></div>
-<div id = "review"></div>
+<div id="title"></div>
+<div id="genre"></div>
+<div id="authors"></div>
+<div id="review"></div>
+<div class ="img"></div>
 <script src="aboutBook.js"></script>
 </body>
 </html>
