--- a/aboutBook.html
+++ b/aboutBook.html
@@ -3,13 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" type="text/css" href="aboutBook.css"/>
+    <style></style>
 </head>
 <body>
-<div id="title"></div>
-<div id="genre"></div>
-<div id="authors"></div>
-<div id="review"></div>
-<div class ="img"></div>
+<div id ="title"></div>
+<div id ="genre"></div>
+<div id ="authors"></div>
+<div id ="review"></div>
+<div id ="img"></div>
+<div id ="dateOfPublication"></div>
 <script src="aboutBook.js"></script>
 </body>
 </html>
