Получение параметров по идентификатору,ссылка без обработки клика

--- a/aboutBook.html
+++ b/aboutBook.html
@@ -39,6 +39,6 @@
         </td>
     </tr>
 </table>
-<script src="aboutBook.js"></script>
+<script type ="module" src="aboutBook.js"></script>
 </body>
 </html>
