--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <link>
-    <meta charset="UTF-8">
-    <title>Список книг</title>
-    <link rel="stylesheet" type="text/css" href="forBook.css"/>
+<meta charset="UTF-8">
+<title>Список книг</title>
+<link rel="stylesheet" type="text/css" href="forBook.css"/>
 </head>
 <body>
 <div class="header">Список книг</div>
@@ -14,6 +14,6 @@
         <th>Авторы</th>
     </tr>
 </table>
-<script src="book.js"></script>
+<script type= "module" src="book.js"></script>
 </body>
 </html>
