Создание таблицы с помощью классов, кнопка удаления

--- a/aboutBook.html
+++ b/aboutBook.html
@@ -7,7 +7,7 @@
     <style></style>
 </head>
 <body>
-<table id="table">
+<table id="bookTable">
     <tr>
         <td colspan="2">
             <div id="title"></div>
