--- a/index.html
+++ b/index.html
@@ -7,13 +7,7 @@
 </head>
 <body>
 <div class="header">Список книг</div>
-<table id="table">
-    <tr>
-        <th id="titleOfBooks"><a href="#">Название</a></th>
-        <th>Жанр</th>
-        <th>Авторы</th>
-    </tr>
-</table>
-<script type= "module" src="book.js"></script>
+<table id="table"></table>
+<script type= "module" src="baseOfBooks.js"></script>
 </body>
 </html>
